--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="website icon" type="png/jpg" href="/online-resume.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio, Nabaoui Aymen</title>
+    <title>Portfolio of Aymen Nabaoui</title>
   </head>
   <body>
     <div id="root"></div>
